--- a/README.html
+++ b/README.html
@@ -146,12 +146,15 @@ hr {
 
 <p>Coursera Getting and Cleaning Data Project</p>
 
+<p>You can look at the results of this project by reading the output file called ProjectTidyData.csv using read.table.</p>
+
 <p>In order to reproduce the results of this project:</p>
 
 <ul>
-<li>Clone the repository at <a href="https://github.com/ehodder/Getting-and-Cleaning-Data-Project">https://github.com/ehodder/Getting-and-Cleaning-Data-Project</a></li>
+<li>Clone the repository at <a href="https://github.com/ehodder/Getting-and-Cleaning-Data-Project">https://github.com/ehodder/Getting-and-Cleaning-Data-Project</a> into your working directory</li>
+<li>Download <a href="https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip">https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip</a></li>
+<li>Extract the zipped data into your working directory</li>
 <li>Open the run_analysis.R file</li>
-<li>Be sure that your working directory is set to the folder where you downloaded the repository</li>
 </ul>
 
 <p>The when you execute run_analysis.R the script will </p>
